# GaiaOS

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py  root.py
auth/: __init__.py  dependencies.py  email_service.py  jwt_provider.py  password_hashing.py  roles.py
cache/: __init__.py  client.py  keys.py
config/: settings.py
config/environments/: dev.env.example  prod.env.example  (+1 more)
db/: __init__.py  base.py  causal_repository.py  repository.py  session.py
docs/: GaiaOS_Architecture_v1.0.md  Roadmap_Phase1.md  Roadmap_Phase2.md  Roadmap_Phase3.md
eval/: __init__.py
gateway/: __init__.py  auth_stub.py  context.py  middleware.py  rate_limit_stub.py  rate_limiter_redis.py
ingestion/: hazard_event_seed.py  literature_seed.py
logging_config/: __init__.py  setup.py
mcp_servers/: __init__.py
metrics/: __init__.py  collector.py  events.py
requirements/: base.txt  dev.txt
simulation_engine/: __init__.py  registry.py
tests/: __init__.py  conftest.py  test_air_quality_agent.py  test_atmosphere_agent.py  test_auth.py  test_cache.py  test_causal_chain_agent.py  test_classifier.py  test_config.py  test_critic_agent.py  test_db_connection.py  test_eval_harness.py  test_fan_out.py  test_gateway.py  test_graph_builder.py  test_health.py  test_hybrid_retrieval.py  test_investigation_job.py  test_investigation_ownership.py  test_investigations_api.py  test_investigations_stream.py  test_literature_agent.py  test_literature_mcp_server.py  test_logging.py  test_ocean_agent.py  test_rate_limiter.py  test_recursive_cte.py  test_schemas.py  test_seismic_agent.py  test_seismic_mcp_server.py  test_simulation_agent.py  test_simulation_models.py  test_synthesis_agent.py  test_wildfire_agent.py  test_worker_retry.py
tools/: __init__.py  create_admin.py  geocoding.py
workers/: __init__.py  worker.py
(+89 files in other folders)
